# kerux

./: .gitignore  Cargo.toml  design_choices.md  dev_process.md  index.md  timeline.md
src/: db_pool.rs  error.rs  log.rs  main.rs  sign.rs
src/client/: auth.rs  ephemeral.rs  error.rs  mod.rs  room.rs  room_events.rs  sync.rs  user.rs
src/client_api/: auth.rs  ephemeral.rs  mod.rs  room.rs  room_events.rs  user.rs
src/events/: ephemeral.rs  mod.rs  pdu.rs  room.rs
src/events/room_version/: mod.rs  v4.rs
src/server_api/: mod.rs
src/state/: mod.rs
src/storage/: mem.rs  mod.rs  postgres.rs  sled.rs
src/util/: mod.rs  mxid.rs  mxid_server_name.regex  storage.rs
src/util/state/: mod.rs
src/validate/: auth.rs
