[package]
name = "matrix_server"
version = "0.1.0"
authors = ["Rose Hudson <rose@krx.sh>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0-alpha.2"
base64 = "0.10"
chrono = "0.4.7"
crossbeam = "0.7.2"
displaydoc = "0.1.5"
futures = { version = "0.3.1", features = ["compat"] }
percent-encoding = "2"
rand = "0.7.0"
ring = "0.16"
rust-argon2 = "0.5.1"
serde = "1.0"
serde_canonical = "0.1"
serde_json = "1.0"
tokio = "0.2.0-alpha.6"
tokio-postgres = { version = "0.4.0-rc.3", features = ["with-uuid-0_7", "with-serde_json-1"] }
toml = "0.5.3"
tracing = "0.1.5"
tracing-fmt = "0.0.1-alpha.3"
tracing-log = "0.0.1-alpha.1"
tracing-futures = { version = "0.0.1-alpha.1", features = ["tokio", "std-future", "futures-01"] }
uuid = { version = "0.7.4", features = ["v4"] }
