[package]
name = "kerux"
version = "0.1.0"
authors = ["Tommy Hudson <thomhuds@protonmail.com>"]
edition = "2018"

[features]
default = ["storage-mem", "storage-sled"]
storage-mem = []
storage-sled = ["sled", "bincode"]
storage-postgres = ["tokio-postgres"]

[dependencies]
actix-cors = "0.5.4"
actix-rt = "2.1.0"
actix-web = "3.2.2"
async-recursion = "0.3.2"
async-trait = "0.1.22"
base64 = "0.10"
chrono = "0.4"
crossbeam = "0.7.2"
displaydoc = "0.1.5"
enum_extract = "0.1.1"
futures = "0.3.13"
itertools = "0.10"
lazy_static = "1.4.0"
percent-encoding = "2"
rand = "0.7.0"
regex = { version = "1.3.4", default-features = false, features = ["perf"] }
ring = "0.16"
rust-argon2 = "0.5.1"
serde = "1.0"
serde_canonical = "0.1"
serde_json = "1.0"
tokio = { version = "0.2.13", features = ["macros", "sync"] }
toml = "0.5.3"
tracing = { git = "https://github.com/rosehuds/tracing" }
tracing-error = { git = "https://github.com/rosehuds/tracing" }
tracing-subscriber = { git = "https://github.com/rosehuds/tracing", features = ["fmt"] }
uuid = { version = "0.8.1", features = ["v4"] }

sled = { version = "0.34", optional = true }
bincode = { version = "1.3", optional = true }
tokio-postgres = { version = "0.5.1", features = ["with-uuid-0_8", "with-serde_json-1"], optional = true }
